--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
     <title>Texas Park Weather</title>
 </head>
 <body>
+    <div class="input-group justify-content-center mt-5">
+        <select id="searchField" class="search">
+            <option value="">Select</option>
+            <option value="Alibates-Flint-Quarries">Alibates Flint Quarries</option>
+            <option value="Amistad">Amistad</option>
+            <option value="Big-Bend">Big Bend</option>
+            <option value="Big-Thicket">Big Thicket</option>
+            <option value="Chamizal">Chamizal</option>
+            <option value="El-Camino-Real-de-los-Tejas">El Camino Real de los Tejas</option>
+            <option value="El-Camino-Real-de-Tierra-Adentro">El Camino Real de Tierra Adentro</option>
+            <option value="Fort-Davis">Fort Davis</option>
+            <option value="Guadalupe-Mountains">Guadalupe Mountains</option>
+            <option value="Lake-Meredith">Lake Meredith</option>
+            <option value="Lyndon-B-Johnson">Lyndon B Johnson</option>
+            <option value="Padre-Island">Padre Island</option>
+            <option value="Palo-Alto-Battlefield">Palo Alto Battlefield</option>
+            <option value="Rio-Grande">Rio Grande</option>
+            <option value="San-Antonio-Missions">San Antonio Missions</option>
+            <option value="Waco-Mammoth">Waco Mammoth</option>
+        </select>
+    </div>
     
 </body>
 </html>
