--- a/index.html
+++ b/index.html
@@ -1,12 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Texas Park Weather</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>Texas Parks Weather</title>
+        <link rel="stylesheet" href="style.css" />
+    </head>
+    <header>
+        <h1>Texas Parks Weather</h1>
+    </header>
+
+    <body>
+
+      <div class="hero"></div>
+
+        <div class="row">
+            <div class="column">
+              <h2>Search</h2>
+            </div>
+            <div class="column">
+              <h2>Park</h2>
+            </div>
+            <div class="column">
+              <h2>Weather</h2>
+            </div>
+        </div>
+
+        <footer>
+            <h3>Made By: </h3>
+        </footer>
+
+    </body>
 </html>
