--- a/index.html
+++ b/index.html
@@ -1,26 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-<<<<<<< HEAD
-<<<<<<< HEAD
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-<script src="C:\Users\Alex\Desktop\projects\TexasParkWeather\weather.js"></script>
-</body>
-=======
-    <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <title>Texas Parks Weather</title>
-        <link rel="stylesheet" href="style.css" />
-    </head>
-    <header>
-        <h1>Texas Parks Weather</h1>
-    </header>
-=======
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -31,30 +10,21 @@
   <header>
     <h1>Texas Parks Weather</h1>
   </header>
->>>>>>> main
-
   <body>
     <div class="hero"></div>
-
     <div class="row">
       <div class="column">
         <h2>Search</h2>
         <div class="input-group justify-content-center mt-5">
           <select id="searchField" class="search">
             <option value="">Select</option>
-            <option value="Alibates-Flint-Quarries">
-              Alibates Flint Quarries
-            </option>
+            <option value="Alibates-Flint-Quarries">Alibates Flint Quarries</option>
             <option value="Amistad">Amistad</option>
             <option value="Big-Bend">Big Bend</option>
             <option value="Big-Thicket">Big Thicket</option>
             <option value="Chamizal">Chamizal</option>
-            <option value="El-Camino-Real-de-los-Tejas">
-              El Camino Real de los Tejas
-            </option>
-            <option value="El-Camino-Real-de-Tierra-Adentro">
-              El Camino Real de Tierra Adentro
-            </option>
+            <option value="El-Camino-Real-de-los-Tejas">El Camino Real de los Tejas</option>
+            <option value="El-Camino-Real-de-Tierra-Adentro">El Camino Real de Tierra Adentro</option>
             <option value="Fort-Davis">Fort Davis</option>
             <option value="Guadalupe-Mountains">Guadalupe Mountains</option>
             <option value="Lake-Meredith">Lake Meredith</option>
@@ -74,20 +44,9 @@
         <h2>Weather</h2>
       </div>
     </div>
-
-<<<<<<< HEAD
-        <footer>
-            <h3>Made By: </h3>
-        </footer>
-
-    </body>
-
->>>>>>> main
-</html>
-=======
     <footer>
       <h3>Made By:</h3>
     </footer>
+      <script src="C:\Users\Alex\Desktop\projects\TexasParkWeather\weather.js"></script>
   </body>
 </html>
->>>>>>> main
