add local storage js

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <script src="C:\Users\Alex\Desktop\projects\TexasParkWeather\weather.js"></script>
+<script src="TexasParkWeather\assets/localstorage.js"></script>
 </body>
 =======
     <head>
@@ -65,6 +66,10 @@
             <option value="San-Antonio-Missions">San Antonio Missions</option>
             <option value="Waco-Mammoth">Waco Mammoth</option>
           </select>
+        </div>
+        <div class="search">
+            <h2>Recent Searches:</h2>
+            <p><strong>Results:</strong> <span id="recent-search"></span></p>
         </div>
       </div>
       <div class="column">
