--- a/index.html
+++ b/index.html
@@ -66,5 +66,6 @@
       <h3>Made By:</h3>
     </footer>
       <script src="C:\Users\Alex\Desktop\projects\TexasParkWeather\weather.js"></script>
+      <script src="assets/localstorage.js"></script>
   </body>
 </html>
