added local storage elements

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <option value="Waco">Waco Mammoth</option>
           </select>
         </div>
-        <div class="search">
+        <div class="search-results">
             <h2>Recent Searches:</h2>
             <p><strong>Results:</strong> <span id="recent-search"></span></p>
         </div>
@@ -65,7 +65,8 @@
     <footer>
       <h3>Made By:</h3>
     </footer>
-      <script src="C:\Users\Alex\Desktop\projects\TexasParkWeather\weather.js"></script>
+      <!-- <script src="C:\Users\Alex\Desktop\projects\TexasParkWeather\weather.js"></script> -->
+      <script src = "assets/weather.js"></script>
       <script src="assets/localstorage.js"></script>
   </body>
 </html>
