--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Texas Parks Weather</title>
     <link rel="stylesheet" href="./assets/style.css"/>
   </head>
@@ -20,41 +20,45 @@
         <div class="input-group justify-content-center mt-5">
           <select id="searchField" class="search">
             <option value="">Select</option>
-            <option value="Alibates-Flint-Quarries">
-              Alibates Flint Quarries
-            </option>
-            <option value="Amistad">Amistad</option>
-            <option value="Big-Bend">Big Bend</option>
-            <option value="Big-Thicket">Big Thicket</option>
-            <option value="Chamizal">Chamizal</option>
-            <option value="El-Camino-Real-de-los-Tejas">
-              El Camino Real de los Tejas
-            </option>
-            <option value="El-Camino-Real-de-Tierra-Adentro">
-              El Camino Real de Tierra Adentro
-            </option>
-            <option value="Fort-Davis">Fort Davis</option>
-            <option value="Guadalupe-Mountains">Guadalupe Mountains</option>
-            <option value="Lake-Meredith">Lake Meredith</option>
-            <option value="Lyndon-B-Johnson">Lyndon B Johnson</option>
-            <option value="Padre-Island">Padre Island</option>
-            <option value="Palo-Alto-Battlefield">Palo Alto Battlefield</option>
-            <option value="Rio-Grande">Rio Grande</option>
-            <option value="San-Antonio-Missions">San Antonio Missions</option>
-            <option value="Waco-Mammoth">Waco Mammoth</option>
+            <option value="alfl">Alibates Flint Quarries</option>
+            <option value="amis">Amistad</option>
+            <option value="Bibe">Big Bend</option>
+            <option value="Bith">Big Thicket</option>
+            <option value="Cham">Chamizal</option>
+            <option value="elte">El Camino Real de los Tejas</option>
+            <option value="elca">El Camino Real de Tierra Adentro</option>
+            <option value="foda">Fort Davis</option>
+            <option value="gumo">Guadalupe Mountains</option>
+            <option value="lamr">Lake Meredith</option>
+            <option value="lyjo">Lyndon B Johnson</option>
+            <option value="pais">Padre Island</option>
+            <option value="paal">Palo Alto Battlefield</option>
+            <option value="rigr">Rio Grande</option>
+            <option value="saan">San Antonio Missions</option>
+            <option value="waco">Waco Mammoth</option>
           </select>
         </div>
       </div>
       <div class="column">
         <h2>Park</h2>
+        <img id="img">
+        <div id="cityname"></div>
+        <div id="city"></div>
+        <div id="line1"></div>
+        <div id="pc"></div>
+        <div id="sc"></div>
       </div>
       <div class="column">
         <h2>Weather</h2>
+        <div class="weatherDiv">
+        </div>
+        <div class="tempDiv"></div>
       </div>
     </div>
 
     <footer>
       <h3>Made By:</h3>
     </footer>
+    <script src="./assets/script.js"></script>
   </body>
 </html>
