local storage set name

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <footer>
       <h3>Made By:</h3>
     </footer>
-      <script src="assets/localstorage.js"></script>
+      <!-- <script src="assets/localstorage.js"></script> -->
     <script src="./assets/script.js"></script>
   </body>
 </html>
