--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
       </div>
       <div class="column">
         <h2>Weather</h2>
-        <div class="weatherDiv">
-        </div>
+        <div class="weatherDiv"></div>
         <div class="tempDiv"></div>
       </div>
     </div>
