saved storage working and displays

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div class="search-results">
             <h2>Recent Searches:</h2>
-            <p><strong>Results:</strong> <span id="recent-search"></span></p>
+            <p><strong></strong> <span id="recent-search"></span></p>
         </div>
       </div>
       <div class="column">
