weather display details

--- a/index.html
+++ b/index.html
@@ -38,7 +38,9 @@
         </div>
         <div class="search-results">
             <h2>Recent Searches:</h2>
-            <p><strong></strong> <span id="recent-search"></span></p>
+            <p><strong></strong> <li><span id="recent-search">
+            </li>
+            </span></p>
         </div>
       </div>
       <div class="column">
@@ -51,14 +53,16 @@
         <div id="sc"></div>
       </div>
       <div class="column">
-        <h2>Weather</h2>
-        <div class="weatherDiv"></div>
+        <h2>Weather:</h2>
         <div class="tempDiv"></div>
+        <div class="weatherDiv"></div>
+        <div class="humidityDiv"></div>
+        <div class="windDiv"></div>
       </div>
     </div>
 
     <footer>
-      <h3>Made By:</h3>
+      <h3>Made By: Alex, Dylan and Reetah</h3>
     </footer>
       <!-- <script src="assets/localstorage.js"></script> -->
 
