working on weather icon

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <div class="weatherDiv"></div>
         <div class="humidityDiv"></div>
         <div class="windDiv"></div>
+        <img class="imgDiv"></div>
       </div>
     </div>
 
