recent search display

--- a/index.html
+++ b/index.html
@@ -38,9 +38,8 @@
         </div>
         <div class="search-results">
             <h2>Recent Searches:</h2>
-            <p><strong></strong> <li><span id="recent-search">
-            </li>
-            </span></p>
+            <p><strong></strong> <ul id="recent-search"></ul>
+            </p>
         </div>
       </div>
       <div class="column">
